updated data gen notebook

--- a/simulate_imbalanced_data.ipynb
+++ b/simulate_imbalanced_data.ipynb
@@ -5,17 +5,16 @@
    "id": "25f94438-5aaf-473d-8ca2-53b354d43856",
    "metadata": {},
    "source": [
-    "# Imbalanced Data Join\n",
+    "# Simulate Fake Data\n",
     "\n",
-    "## Background\n",
+    "This chunk of code was created for a different project so there's a few hoops in here that are there totally to make the cardinality highly skewed. Those don't matter here, but note that the final data set has parquet files that vary wildly in size. \n",
     "\n",
-    "We've run into some applied situations in the wild where joins on highly imbalanced data behave poorly in Dask. In some situtions the run time is more than desired, and in others workers may die unexpectedly. The purpose of this notebook is to create two simulated data sets that exhibits the type of problematic imbalance that we've encountred in the wild. We'll have a few parameters in here so we can create datasets of different sizes that exhibit the gnarly imbalance and these can be used for practical test cases. \n",
-    "\n"
+    "To run this you will need the following path in your working directory: `./output/df1/` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b17b714c-584f-45a2-87d1-24787c19e8c2",
    "metadata": {},
    "outputs": [],
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "86632d90-7167-4ae1-a376-35b3a710671b",
    "metadata": {},
    "outputs": [],
@@ -54,14 +53,7 @@
     "group4_n = 40\n",
     "\n",
     "P_maj1 = (160, 125125)     # parameters of the majority exp dist\n",
-    "P_min1 = (1006402, 8200726) # parameters of the minority exp dist\n",
-    "\n",
-    "# df2 constants:\n",
-    "\n",
-    "df2_groupings_n = 11578  \n",
-    "\n",
-    "P_maj2 = (1.0, 1.5 )      # parameters for the majority exp dist\n",
-    "P_min2 = (101.0, 554.0 )  # parameters for the minority exp dist"
+    "P_min1 = (1006402, 8200726) # parameters of the minority exp dist\n"
    ]
   },
   {
@@ -73,9 +65,9 @@
     "\n",
     "The first dataframe is going to be  `df1` and it is the larger table in terms of record count. The fields in `df1` are as follows:\n",
     "\n",
-    "`key`: the key used to join with `df2` later. The number of unique keys is low compared to the number of records in each key\n",
+    "`key`: the key. The number of unique keys is low compared to the number of records in each key\n",
     "\n",
-    "`bucket1`: Every key has the same number of unique values in `bucket1`. That number is set by the constant `bucket_n` below\n",
+    "`bucket1`: Every key has the same number of unique values in `bucket1`. That number is set by the constant `bucket_n` above\n",
     "\n",
     "`group1`: There are 4 groupings. Each of these groupings is assinged a key and they are later used in a group by \n",
     "\n",
@@ -85,23 +77,12 @@
     "\n",
     "`group4`: see above\n",
     "\n",
-    "`value`: This is the value we will sum later. It's random and has no impact on the process in any way. \n",
-    "\n",
-    "***side note:*** not a bad idea to allow an arbitrary number of groupings sent by a parameter for testing. May iterate on that later. \n",
-    "\n",
-    "\n",
-    "\n",
-    "## `df2` - smaller dataset that puts `df1` into some groupings\n",
-    "\n",
-    "\n",
-    "`df2_grouping`: every key is in at least one, and often many groupings. \n",
-    "\n",
-    "`key`: Key to join to `df1` - not unique in *either* df1 nor df2. This is a many to many join on highly imbalanced groupings. \n",
+    "`value`: This is the value we will sum later. It's random normal. \n",
     "\n",
     "\n",
     "## Simulate `df1`\n",
     "\n",
-    "Let's build `df1` first:\n",
+    "Let's build `df1`:\n",
     "\n",
     "\n"
    ]
@@ -225,121 +206,8 @@
     "    \n",
     "    key = key + 1\n",
     "    \n",
-    "# bring them all together in a single df\n",
-    "# when we get ready to write out the larget than ram version, we can change this to write a parquet file\n",
     "\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "feed9eb6-aa9a-499b-8ca6-f20941f0f327",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cd61a04-d139-4241-952b-b95079caa2a1",
-   "metadata": {},
-   "source": [
-    "At this point we should have a full `df1`. \n",
-    "\n",
-    "## Simulate `df2`\n",
-    "\n",
-    "`df2` is the smaller dataframe that will be (many to many) joined to `df1`. \n",
-    "\n",
-    "We use the constants defined at the top of this notebook. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2df2fdb3-48b2-41ef-b0f6-96e80749680a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#magic distribution params tuned using source data\n",
-    "\n",
-    "draws_per_df2group_majority = st.expon.rvs(*P_maj2, size= int(.99 * df2_groupings_n)).astype(int)\n",
-    "\n",
-    "draws_per_df2group_minority = st.expon.rvs(*P_min2, size= int(.01 * df2_groupings_n)).astype(int)\n",
-    "\n",
-    "draws_per_group = np.concatenate([draws_per_df2group_majority, draws_per_df2group_minority])\n",
-    "\n",
-    "# maximum draws can't exceed key_n\n",
-    "draws_per_group = np.clip(draws_per_group, a_min=0, a_max=key_n)\n",
-    "\n",
-    "# however we want to make sure at least one group has everything... so we force the last record to be key_n\n",
-    "# for stress testing we might make the last 5 or more be everyting \n",
-    "draws_per_group[draws_per_group.size - 1] = key_n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4b57330-3c27-452e-b124-bff1b26c4a35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6f450e4-88ba-49ee-9664-ddb4f4dc495a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df2_list = []\n",
-    "df2_group = 1\n",
-    "\n",
-    "# simulate values for each bucket. Simulate a df with a single value for the bucket then randomly assign groups and values\n",
-    "for draws in draws_per_group:\n",
-    "    df = pd.DataFrame()\n",
-    " \n",
-    "    df[\"df2_group\"] = np.resize(df2_group, draws)\n",
-    "    df[\"key\"] = np.random.choice(a=np.arange(1, key_n+1), size = draws, replace=False) # draw draws number of times from 1:key_n\n",
-    "   \n",
-    "    \n",
-    "    df2_list.append(df)\n",
-    "    \n",
-    "    df2_group = df2_group + 1\n",
-    "    \n",
-    "# bring them all together in a single df\n",
-    "# df2 should never need partitioning so when writing this out to parquet, do it after the concat\n",
-    "df2 = pd.concat(df2_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09360a81-f74a-4fc2-b1d1-dab97290cdaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecd688ff-bffa-46c3-9fea-127c1af4fdd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.to_parquet(f'./output/df2/df2.parquet')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c7e7c9d8-354a-45af-846c-60ec787bb88d",
-   "metadata": {},
-   "source": [
-    "## Desired output\n",
-    "\n",
-    "The desired operation to make stable is to join `df1` to `df2` by `key` which is a many to many join. Then collapse that by `df2_group`, `bucket`, and the four `group` variables then do a `sum(value)` "
    ]
   },
   {
