--- a/query_parquet.ipynb
+++ b/query_parquet.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "d9c25ccc-f53e-4806-be74-cd9d3937cfcd",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5df3890c-e91d-4c39-a874-f9d7468e7095",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "775ce8f9-843c-4571-aa34-f39cddda1fd7",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "61a25959-d63d-47ef-965b-7661936b32c4",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.22 s, sys: 1.14 s, total: 3.36 s\n",
-      "Wall time: 4.68 s\n"
+      "CPU times: user 2.46 s, sys: 1.13 s, total: 3.59 s\n",
+      "Wall time: 24 s\n"
      ]
     },
     {
@@ -105,7 +105,7 @@
        "0  3992769124"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "c2b82a36-c6e3-4234-b50d-00ca2c48d60e",
    "metadata": {},
    "outputs": [
@@ -135,8 +135,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 29s, sys: 6.87 s, total: 2min 36s\n",
-      "Wall time: 16.3 s\n"
+      "CPU times: user 2min 36s, sys: 9.01 s, total: 2min 45s\n",
+      "Wall time: 18.8 s\n"
      ]
     },
     {
@@ -172,43 +172,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8</td>\n",
-       "      <td>443652115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>6</td>\n",
        "      <td>443603318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7</td>\n",
-       "      <td>443638855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>4</td>\n",
        "      <td>443621397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>443649122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3</td>\n",
-       "      <td>443620954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>443667068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>443640816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>443620954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5</td>\n",
+       "      <td>443649122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>443652115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>443638855</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -217,17 +217,17 @@
       "text/plain": [
        "   group1  rec_count\n",
        "0       9  443675479\n",
-       "1       8  443652115\n",
-       "2       6  443603318\n",
-       "3       7  443638855\n",
-       "4       4  443621397\n",
-       "5       5  443649122\n",
-       "6       3  443620954\n",
-       "7       2  443667068\n",
-       "8       1  443640816"
+       "1       6  443603318\n",
+       "2       4  443621397\n",
+       "3       2  443667068\n",
+       "4       1  443640816\n",
+       "5       3  443620954\n",
+       "6       5  443649122\n",
+       "7       8  443652115\n",
+       "8       7  443638855"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "dc7042da-4bd7-4d3f-960c-8809a0fb90ea",
    "metadata": {},
    "outputs": [
@@ -265,8 +265,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 27s, sys: 39.2 s, total: 4min 6s\n",
-      "Wall time: 26.8 s\n"
+      "CPU times: user 3min 27s, sys: 54.5 s, total: 4min 22s\n",
+      "Wall time: 34.3 s\n"
      ]
     },
     {
@@ -297,13 +297,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2.218020e+08</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.218246e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2.218112e+08</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2.218287e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -312,18 +312,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.218359e+08</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.218112e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2.217947e+08</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.218272e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2.218246e+08</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.217947e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -332,13 +332,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2.218272e+08</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.218359e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>2.218287e+08</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.218020e+08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -346,18 +346,18 @@
       ],
       "text/plain": [
        "   group1     sum_value\n",
-       "0       3  2.218020e+08\n",
-       "1       4  2.218112e+08\n",
+       "0       5  2.218246e+08\n",
+       "1       9  2.218287e+08\n",
        "2       1  2.218182e+08\n",
-       "3       2  2.218359e+08\n",
-       "4       6  2.217947e+08\n",
-       "5       5  2.218246e+08\n",
+       "3       4  2.218112e+08\n",
+       "4       8  2.218272e+08\n",
+       "5       6  2.217947e+08\n",
        "6       7  2.218255e+08\n",
-       "7       8  2.218272e+08\n",
-       "8       9  2.218287e+08"
+       "7       2  2.218359e+08\n",
+       "8       3  2.218020e+08"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,9 +798,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ecca191-b8f8-4810-bb95-412326dea791",
+   "metadata": {},
+   "source": [
+    "## parquet on S3\n",
+    "\n",
+    "we'll use awswrangler to get a list of the parquet files I want to query, then use Duck to filter. This is because it looks like globbing is not built into DuckDB 0.5.0 which I am running. Github makes it appear that globbing on S3 is supported, but that must be in the dev version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "083816d6-8298-4fcd-a78e-0f312b386e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<duckdb.DuckDBPyConnection at 0x126e2d9f0>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import awswrangler as wr\n",
+    "\n",
+    "con.execute(\"\"\"\n",
+    "load httpfs;\n",
+    "SET s3_region='eu-west-1';\n",
+    "SET s3_access_key_id='XXX';\n",
+    "SET s3_secret_access_key='YYY';            \n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "8ac7ee3f-2346-4a19-813e-ee4d6e16200c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_parquet_list = wr.s3.list_objects('s3://mypath/*.parquet')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd75eb7-7ab7-4daf-9ec4-5eb889ed75c0",
+   "id": "bc112ffc-ed4f-49ce-add6-9e442ad36502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.execute(f\"select count(1) from parquet_scan({my_parquet_list}) ;\").df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d14498ae-14ca-4b38-a241-a437ef384d64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7590ea85-26fb-4f4c-840b-55fceb8326df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4e2ddc07-1e5e-4d8c-8381-39c83da6d97a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e68028f-462a-4f52-959e-4289bd832610",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e083b1-351a-4318-8b32-990cce515665",
    "metadata": {},
    "outputs": [],
    "source": []
