added rec count

--- a/query_s3.ipynb
+++ b/query_s3.ipynb
@@ -98,7 +98,7 @@
    "id": "11996fa7-733f-48b1-9f41-e979f53e6675",
    "metadata": {},
    "source": [
-    "The test is to read 101 files which is approx 165MB. "
+    "The test is to read 101 files which is approx 165MB and 11.5m records. "
    ]
   },
   {
