added awswrangler read test

--- a/query_s3.ipynb
+++ b/query_s3.ipynb
@@ -118,7 +118,10 @@
    "id": "06f9bb6a-d2ff-48d4-8388-fe0f43c9004d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%timeit\n",
+    "df = wr.s3.read_parquet(path=my_parquet_list[0:100], boto3_session=my_session)"
+   ]
   }
  ],
  "metadata": {
