added my session

--- a/query_s3.ipynb
+++ b/query_s3.ipynb
@@ -90,7 +90,9 @@
     "SET s3_access_key_id='{AWS_ACCESS_KEY_ID}';\n",
     "SET s3_secret_access_key='{AWS_SECRET_ACCESS_KEY}';\n",
     "SET s3_session_token='{AWS_SESSION_TOKEN}';            \n",
-    "\"\"\")"
+    "\"\"\")\n",
+    "\n",
+    "my_session = boto3.Session(region_name=region_name, aws_access_key_id=AWS_ACCESS_KEY_ID, aws_secret_access_key=AWS_SECRET_ACCESS_KEY, aws_session_token=AWS_SESSION_TOKEN)\n"
    ]
   },
   {
